creation signup form

--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -32,21 +32,21 @@
                     <div class="col-md-6">
                         <div class="md-form mb-0">
                             <label for="lastname" class="">Nom</label>
-                            <input type="text" id="lastname" name="lastname" class="form-control">
+                            <input type="text" id="lastname" name="lastname" class="form-control" placeholder="Nom" required="required">
                         </div>
                     </div>
 
                      <div class="col-md-6">
                         <div class="md-form mb-0">
                             <label for="firstname" class="">Prénom</label>
-                            <input type="text" id="firstname" name="firstname" class="form-control">
+                            <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Prénom" required="required">
                         </div>
                     </div>
                    
                     <div class="col-md-6">
                         <div class="md-form mb-0">
                             <label for="email" class="">Email</label>
-                            <input type="email" id="email" name="email" class="form-control">
+                            <input type="email" id="email" name="email" class="form-control" placeholder="Email" required="required">
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     <div class="col-md-12">
                         <div class="md-form mb-0">
                             <label for="subject" class="">Objet</label>
-                            <input type="text" id="subject" name="subject" class="form-control">
+                            <input type="text" id="subject" name="subject" class="form-control" placeholder="Objet" required="required">
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     <div class="col-md-12">
                         <div class="md-form">
                             <label for="message">Votre message</label>
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea" placeholder="Message" required="required"></textarea>
                         </div>
                     </div>
                 </div>
