display admin list post

--- a/templates/backoffice/base.html.twig
+++ b/templates/backoffice/base.html.twig
@@ -21,17 +21,17 @@
     </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item {% if url =='home' %} active {% endif %}">
-                    <a class="nav-link" id="nav-link1" href="/">Accueil</a>
+                    <li class="nav-item ">
+                    <a class="nav-link" id="nav-link1" href="/">Ajouter un post</a>
                     </li>
-                     <li class="nav-item {% if url == 'posts' %} active {% endif %}">
-                     <a class="nav-link"  id="nav-link2" href="index.php?action=posts">Posts</a>
+                     <li class="nav-item ">
+                     <a class="nav-link"  id="nav-link2" href="index.php?action=posts">Gérer les posts</a>
                      </li>
-                      <li class="nav-item {% if url == 'signin' %} active {% endif %}">
-                     <a class="nav-link"  id="nav-link3" href="index.php?action=signup">S'inscrire</a>
+                      <li class="nav-item ">
+                     <a class="nav-link"  id="nav-link3" href="">Modérer les commentaires</a>
                      </li>
-                      <li class="nav-item {% if url == 'login' %} active {% endif %}">
-                     <a class="nav-link"  id="nav-link4" href="index.php?action=login">Se connecter</a>
+                      <li class="nav-item ">
+                     <a class="nav-link"  id="nav-link4" href="">Changer les roles</a>
                      </li>
                 </ul>
             </div>
