--- a/templates/frontoffice/admin.html.twig
+++ b/templates/frontoffice/admin.html.twig
@@ -10,10 +10,10 @@
         <!-- Posts List -->
         <div class="card shadow mb-4">
           <div class="card-header py-3 bg-gray">
-            <h6 class="m-0 font-weight-bold text-black">Posts</h6>
+            <h6 class="m-0 font-weight-bold text-black">Liste des articles</h6>
           </div>
           <div class="card-body">
-            <table class="table table-striped table-dark text-center" aria-describedby="liste des posts">
+            <table class="table table-striped table-dark text-center" aria-describedby="liste des articles">
               <thead>
                 <tr>
                   <th scope="col">Auteur</th>
@@ -24,16 +24,18 @@
                 </tr>
               </thead>
               <tbody>
+                 {% for post in posts %}
                   <tr> 
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>{{ post.username}}</td>
+                      <td>{{ post.title}}</td>
+                      <td>{{ post.chapo }}</td>
+                      <td>{{ post.createdAt | date('d/m/Y')}}</td>
                       <td>
                       <a class="btn btn-sm btn-primary shadow-sm" data-toggle="modal" href="">Modifier</a>
                       <a class="btn btn-sm btn-danger shadow-sm" data-toggle="modal" href="">Supprimer</a>
                       </td>
                   </tr>
+                  {% endfor %}
               </tbody>
             </table>
           </div>
@@ -61,15 +63,17 @@
                 </tr>
               </thead>
               <tbody>
+              {% for comment in comments %}
                   <tr> 
-                      <td></td>
-                      <td></td>
+                      <td>{{ comment.pseudo }}</td>
+                      <td>{{ comment.text }}</td>
                       <td></td>
                       <td>
                       <a class="btn btn-sm btn-primary shadow-sm" data-toggle="modal" href="">Valider</a>
                       <a class="btn btn-sm btn-danger shadow-sm" data-toggle="modal" href="">Supprimer</a>
                       </td>
                   </tr>
+                  {% endfor %}
               </tbody>
             </table>
           </div>
@@ -112,5 +116,9 @@
         </div>
       </div> 
     </div>
+
+        <a class="btn btn-md btn-warning mx-2 my-2 px-2 text-lowercase text-center" href="/post/add/">
+          <strong class="fas fa-plus px-1"></strong>
+          <span>Ajouter un post</span>
         
 {% endblock %}
