--- a/templates/backoffice/addpostlist.html.twig
+++ b/templates/backoffice/addpostlist.html.twig
@@ -1,43 +1,29 @@
 {% extends "/backoffice/base.html.twig" %}
 
 {% block title %}Admin{% endblock %}
-
-{% block content %} 
-  <!-- Content Row  -->
-    <div class="row">
-      <!-- Content Column -->
-      <div class="col-lg-12 mb-8">
-        <!-- Posts List -->
-        <div class="card shadow mb-4">
-          <div class="card-header py-3 bg-gray">
-            <h6 class="m-0 font-weight-bold text-black">Commentaires</h6>
-          </div>
-          <div class="card-body">
-            <table class="table table-striped table-dark text-center" aria-describedby="liste des commentaire">
-              <thead>
-                <tr>
-                  <th scope="col">Auteur</th>
-                  <th scope="col">Contenu</th>
-                  <th scope="col">Date de création</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for comment in comments %}
-                  <tr> 
-                      <td>{{ comment.pseudo }}</td>
-                      <td>{{ comment.text }}</td>
-                      <td></td>
-                      <td>
-                      <a class="btn btn-sm btn-primary shadow-sm" data-toggle="modal" href="">Valider</a>
-                      <a class="btn btn-sm btn-danger shadow-sm" data-toggle="modal" href="">Supprimer</a>
-                      </td>
-                  </tr>
-                  {% endfor %}
-              </tbody>
-           
-                    
  
+  {% block content %}
 
-        
+	<section class="page-section mt-4" id="add-blog-post">
+		<div
+			class="container mt-5">
+			<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Ajouter un article</h2>
+			
+			<div class="row">
+				<div
+					class="col-lg-8 mx-auto">
+					<form method="post" action="">
+  
+						<br/>
+						<div id="success"></div>
+						<div class="form-group">
+							<button class="btn btn-primary btn-xl" type="submit">Ajouter</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
+
+    
