--- a/templates/backoffice/addpostlist.html.twig
+++ b/templates/backoffice/addpostlist.html.twig
@@ -3,27 +3,50 @@
 {% block title %}Admin{% endblock %}
  
   {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+    <p class="help-block text-danger"><?= $errorMessage ?></p>
+    <p class="help-block text-success"><?= $successMessage ?></p>
 
-	<section class="page-section mt-4" id="add-blog-post">
-		<div
-			class="container mt-5">
-			<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Ajouter un article</h2>
-			
-			<div class="row">
-				<div
-					class="col-lg-8 mx-auto">
-					<form method="post" action="">
-  
-						<br/>
-						<div id="success"></div>
-						<div class="form-group">
-							<button class="btn btn-primary btn-xl" type="submit">Ajouter</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
+      <h2>Ajouter un post</h2>
+      
+      <form method="post" action="admin/addPost" >
+        <div class="control-group error">
+          <div class="form-group floating-label-form-group controls">
+            <label>Titre</label>
+            <input name="title" type="text" class="form-control" placeholder="Titre"  >
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        
+        <div class="control-group error">
+          <div class="form-group floating-label-form-group controls">
+            <label>Chapo</label>
+            <input name="chapo" type="text" class="form-control" placeholder="Chapo" >
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        
+        <div class="control-group error">
+          <div class="form-group floating-label-form-group controls">
+            <label>Contenu</label>
+            <textarea rows="10" name="content" type="text" class="form-control" placeholder="Contenu" ></textarea>
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        
+        <br>
+        <div id="success"></div>
+        <div class="form-group">
+          <button type="submit" name="submitted" class="btn btn-primary" value="submitted" >Publier le post</button>
+        </div>
+      </form>
+      
+    </div>
+  </div>
+</div>
+		
 {% endblock %}
 
     
