--- a/templates/backoffice/base.html.twig
+++ b/templates/backoffice/base.html.twig
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                  <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                    <a class="nav-link" id="nav-link1" href="/">Ajouter un post</a>
+                    <a class="nav-link" id="nav-link1" href="index.php?action=adminaddpost">Ajouter un post</a>
                     </li>
                      <li class="nav-item ">
-                     <a class="nav-link"  id="nav-link2" href="index.php?action=posts">Gérer les posts</a>
+                     <a class="nav-link"  id="nav-link2" href="index.php?action=adminpost">Gérer les posts</a>
                      </li>
                       <li class="nav-item ">
-                     <a class="nav-link"  id="nav-link3" href="">Modérer les commentaires</a>
+                     <a class="nav-link"  id="nav-link3" href="index.php?action=adminmodifycomment">Modérer les commentaires</a>
                      </li>
                       <li class="nav-item ">
                      <a class="nav-link"  id="nav-link4" href="">Changer les roles</a>
