--- a/templates/frontoffice/login.html.twig
+++ b/templates/frontoffice/login.html.twig
@@ -12,4 +12,5 @@
         <input type="submit" value="Submit">        
     </form>
     <em>jean@free.fr password</em> 
+    <a href="/">Mot de passe oublié?</a>
 {% endblock %}
