admin user status update

--- a/templates/backoffice/admin.html.twig
+++ b/templates/backoffice/admin.html.twig
@@ -16,7 +16,7 @@
             <table class="table table-striped table-dark text-center" aria-describedby="liste des articles">
               <thead>
                 <tr>
-                  <th scope="col">Auteur</th>
+                  <th scope="col">Auteureeee</th>
                   <th scope="col">Titre</th>
                   <th scope="col">Chapô</th>
                   <th scope="col">Date de création</th>
@@ -34,6 +34,7 @@
                   {% endfor %}
               </tbody>
             </table>
+            
               <a class="btn btn-sm btn-primary shadow-sm" data-toggle="modal" href="">Modifier</a>
                       <a class="btn btn-sm btn-danger shadow-sm" data-toggle="modal" href="">Supprimer</a>
                       </td>
@@ -47,5 +48,6 @@
                     <a class="btn btn-outline-primary" href="#">Précédent</a>
                     <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Suivant</a>
                 </nav>
+
       
 {% endblock %}
