user session update

--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -39,7 +39,7 @@
                         {% if auth.user == empty %}
                             <li><a class="nav-link" href=" index.php?action=login " ><i class="bi bi-person-check" style="font-size: 1.5em"></i></a></li>
                         {% else %}
-                            <li><a class="nav-link" href="index.php?action=logout" ><i class="bi bi-person-x" style="font-size: 1.5em"></i></a></li>
+                            <li><a class="nav-link" href="index.php?action=log" ><i class="bi bi-person-x" style="font-size: 1.5em"></i></a></li>
                         {% endif %}
 
                     </ul>
