message flashes update

--- a/templates/frontoffice/login.html.twig
+++ b/templates/frontoffice/login.html.twig
@@ -9,7 +9,7 @@
         <input type="email" id="email" name="email" >
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" >
-        <input type="submit" value="Submit">        
+        <input type="submit" value="Submit" name="submit">        
     </form>
     <em>jean@free.fr password</em> 
     <a href="/">Mot de passe oublié?</a>
