--- a/templates/backoffice/addpostlist.html.twig
+++ b/templates/backoffice/addpostlist.html.twig
@@ -9,7 +9,7 @@
 
       <h2>Ajouter un post</h2>
       
-      <form method="post" action="admin/addPost" >
+      <form method="post" >
         <div class="control-group error">
           <div class="form-group floating-label-form-group controls">
             <label>Titre</label>
@@ -29,7 +29,7 @@
         <div class="control-group error">
           <div class="form-group floating-label-form-group controls">
             <label>Contenu</label>
-            <textarea rows="10" name="content" type="text" class="form-control" placeholder="Contenu" ></textarea>
+            <textarea rows="10" name="message" type="text" class="form-control" placeholder="Message" ></textarea>
             <p class="help-block text-danger"></p>
           </div>
         </div>
