--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -7,7 +7,7 @@
         </header>
         <main>            
     {% endblock title %}  
-    {% block all_posts %}
+    {% block content %}
     {#{% for post in posts %}
         <article id="post" >
         <h2>{{ post.title }}</h2>
