--- a/templates/backoffice/addpostlist.html.twig
+++ b/templates/backoffice/addpostlist.html.twig
@@ -9,7 +9,7 @@
 
       <h2>Ajouter un post</h2>
       
-      <form method="post" action="admin/addPost" >
+      <form method="post" >
         <div class="control-group error">
           <div class="form-group floating-label-form-group controls">
             <label>Titre</label>
