--- a/templates/backoffice/base.html.twig
+++ b/templates/backoffice/base.html.twig
@@ -28,7 +28,7 @@
                      <a class="nav-link"  id="nav-link2" href="index.php?action=adminpost">Gérer les posts</a>
                      </li>
                       <li class="nav-item ">
-                     <a class="nav-link"  id="nav-link3" href="index.php?action=adminmodifycomment">Modérer les commentaires</a>
+                     <a class="nav-link"  id="nav-link3" href="index.php?action=admincomment">Modérer les commentaires</a>
                      </li>
                       <li class="nav-item ">
                      <a class="nav-link"  id="nav-link4" href="">Changer les roles</a>
