--- a/templates/frontoffice/signin.html.twig
+++ b/templates/frontoffice/signin.html.twig
@@ -4,9 +4,9 @@
 
 {% block content %} 
     <h2>Formulaire de connexion</h2>    
-    <form  action="index.php?p=connect" method="POST">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" >
+    <form  action="index.php?action=connect" method="POST">
+        <label for="username">Uername:</label>
+        <input type="text" id="username" name="username" >
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" >
         <input type="submit" value="Submit">        
