--- a/templates/backoffice/addpostlist.html.twig
+++ b/templates/backoffice/addpostlist.html.twig
@@ -29,7 +29,7 @@
         <div class="control-group error">
           <div class="form-group floating-label-form-group controls">
             <label>Contenu</label>
-            <textarea rows="10" name="message" type="text" class="form-control" placeholder="Message" ></textarea>
+            <textarea rows="10" name="content" type="text" class="form-control" placeholder="Contenu" ></textarea>
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -46,5 +46,3 @@
 </div>
 		
 {% endblock %}
-
-    
