--- a/templates/backoffice/postlist.html.twig
+++ b/templates/backoffice/postlist.html.twig
@@ -30,6 +30,7 @@
                       <td>{{ post.title}}</td>
                       <td>{{ post.chapo }}</td>
                       <td>{{ post.createdAt | date('d/m/Y')}}</td>
+                      <td><a href="?action=adminmodifypost&post={{ post.id }}">aaa</a></td>
                   </tr>
                   {% endfor %}
               </tbody>
@@ -47,4 +48,3 @@
         
 
 {% endblock %}
-
