--- a/templates/frontoffice/login.html.twig
+++ b/templates/frontoffice/login.html.twig
@@ -5,11 +5,11 @@
 {% block content %} 
     <h2>Formulaire de connexion</h2>    
     <form method="POST">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" >
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" >
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" >
-        <input type="submit" value="Submit" name="submit">        
+        <input type="submit" value="Submit">        
     </form>
     <em>jean@free.fr password</em> 
     <a href="/">Mot de passe oublié?</a>
