--- a/templates/backoffice/postlist.html.twig
+++ b/templates/backoffice/postlist.html.twig
@@ -30,7 +30,7 @@
                       <td>{{ post.title}}</td>
                       <td>{{ post.chapo }}</td>
                       <td>{{ post.createdAt | date('d/m/Y')}}</td>
-                      <td><a href="?action=adminmodifypost&post={{ post.id }}">aaa</a></td>
+                      <td><a href="?action=admineditpost&post={{ post.id }}">aaa</a></td>
                   </tr>
                   {% endfor %}
               </tbody>
